<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FrequencyTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="x_axis">X:  %f</string>
    <string name="y_axis">Y:  %f</string>
    <string name="z_axis">Z:  %f</string>
    <string name="close">Close</string>
    <string name="frequncy">Frequncy: %f Hz</string>

</resources>
