<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/frequncy"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/frequncy"/>

    <TextView
        android:id="@+id/axex"
        android:text="@string/x_axis"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/axey"
        android:text="@string/y_axis"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/axez"
        android:text="@string/z_axis"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
        <Button
        android:id="@+id/quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickQuit"
        android:text="@string/close" />

</LinearLayout>